force-app/main/default/objects/Excel_Import_Config__c/Excel_Import_Config__c.object-meta.xml
<CustomObject>
    <label>Excel Import Config</label>
    <nameField>
        <label>Config Name</label>
        <length>80</length>
        <type>Text</type>
    </nameField>
    <pluralLabel>Excel Import Configs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>