force-app/main/default/objects/Excel_Import_Config__c/fields/Data_Start_Row_Number__c.field-meta.xml
<CustomField>
    <fullName>Data_Start_Row_Number__c</fullName>
    <label>Data Start Row Number</label>
    <defaultValue>2</defaultValue>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>