force-app/main/default/objects/Excel_Import_Config__c/fields/Distributor__c.field-meta.xml
<CustomField>
    <fullName>Distributor__c</fullName>
    <label>Distributor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>