force-app/main/default/objects/Excel_Import_Config__c/fields/Header_Row_Number__c.field-meta.xml
<CustomField>
    <fullName>Header_Row_Number__c</fullName>
    <label>Header Row Number</label>
    <defaultValue>1</defaultValue>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>