force-app/main/default/objects/Excel_Import_Config__c/fields/Sheet_Name__c.field-meta.xml
<CustomField>
    <fullName>Sheet_Name__c</fullName>
    <label>Sheet Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>