force-app/main/default/objects/Excel_Import_Config__c/fields/Skip_Rows__c.field-meta.xml
<CustomField>
    <fullName>Skip_Rows__c</fullName>
    <label>Skip Rows</label>
    <defaultValue>0</defaultValue>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>