force-app/main/default/objects/Excel_Import_Config__c/fields/Target_Object_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Target_Object_API_Name__c</fullName>
    <label>Target Object API Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>